ecmascript/parser/tests/test262-error-references/fail/021fb596db81e6d0.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/021fb596db81e6d0.js:1:2
  |
1 | {
  |  ^

